2007-06-10

  Get the build working on Solaris (a useful benchmark for how well
  things work on less Linux-like platforms).


2007-06-07

  Fix some errors when mixing internal and system libraries.
  Improve support for FreeBSD.


2007-05-13

  Attempt to detect when a PNG image is using an NScripter-style mask
  area for transparency rather than a PNG alpha channel; add
  command-line flags and compile-time options to force either
  behaviour if auto-detection fails.  This should fix games like
  Tsukihime which were broken by the addition of alpha channel
  support.


2007-05-06

  Fix some bugs: parsing of arguments, saving of vertical text,
  and compilation without INSANI defined.


2007-05-01

  Merge in some more changes from Roine designed to make life better
  for OS X users:

  Include an Xcode project to simplify Mac builds.

  If game resources are not in the app's bundle, look for them in the
  application path instead.

  Store saves and other data under Application Support, not
  Preferences.


2007-04-27

  Merge in Roine's scaling patch.  This is considered experimental,
  and will currently only be enabled if RCA_SCALE is defined at
  compile-time.

  Fix a silly bug in the previous mergings.


2007-04-25

  Merge in an adapted version of the `drawfix' patch to speed up
  screen updates in windowed mode, plus a number of other patches:

  Support both SAR and NSA archives at the same time (zalas)

  Reduce flicker when sprites are changed (Roine Gustafsson)

  Fix gcc detection on OS X (Roine)

  Display missing game data error as a dialog on OS X (Roine)

  Support multiple games without game IDs at the same time (Roine)

  Fix incorrect clipping of text shadow (Roine)


2007-04-15

  Merge in useful fixes from onscripter-20070206.


2007-04-08

  Update build system to use a configure script that generates a
  platform-appropriate makefile.  This also verifies that all required
  dependencies are available, and provides the option of building